# portfolio-site

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: core.py  database.py  main.py  models.py  seed.py
app/routes/: home.py  projects.py  resume.py
app/static/css/: style.css
app/templates/: base.html  home.html  projects.html  resume.html
tests/: conftest.py  test_database.py  test_models.py  test_routes.py  test_seed.py
