[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "portfolio-site"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "sqlalchemy==2.0.50",
    "psycopg2-binary==2.9.12",
    "jinja2==3.1.6",
    "pydantic==2.13.3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Default rules + a few useful additions
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names, etc.)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (likely bugs)
    "UP",  # pyupgrade (modernize syntax)
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
